# XdagRandomxMiner

./: .gitignore  CMakeLists.txt  README.md  RandomX.md  RandomX_Miner.sln
RandomX/src/asm/: configuration.asm
RandomX/vcxproj/: randomx.vcxproj
RandomX_Miner/: RandomXConfig.cmake  RandomX_Miner.vcxproj  RandomX_Miner.vcxproj.filters  main.cpp  packages.config
RandomX_Miner/Core/: Miner.h  MinerManager.cpp  MinerManager.h  global.cpp  global.h
RandomX_Miner/MinerEngine/: XCpuMiner.cpp  XCpuMiner.h
RandomX_Miner/XDagCore/: XBlock.cpp  XBlock.h  XPool.cpp  XTaskProcessor.cpp  XTaskProcessor.h  XTaskWrapper.cpp  XTaskWrapper.h
